[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherheatmap"
version = "0.1.0"
description = "A short description of the project."
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "requests",
    "click",
    "polars",
    "pandas",
    "geopandas",
    "matplotlib",
    "duckdb",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[tool.setuptools]
packages = ["weatherheatmap"]



[project.scripts]
download_weather = "weatherheatmap.download_weather_data:main"
extract_locs = "weatherheatmap.extract_locs:main"
grp_compute = "weatherheatmap.grp_compute:main" 
make_map = "weatherheatmap.make_map:main"